fix padding on mobile for collection list

--- a/assets/section-collection-list.css
+++ b/assets/section-collection-list.css
@@ -16,8 +16,7 @@
   }
 
 	#index .section-collection-list .page-width {
-    padding-left: 0;
-    padding-right: 0;
+
   }
 
 	#index .section-collection-list .collection-list:not(.slider) {
